--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/pages.css" />
 </head>
 <body>
-  <!-- HEADER UNIFICADO -->
+  <!-- HEADER -->
   <header>
     <nav class="navbar">
       <div class="container navbar-content">
@@ -50,11 +50,75 @@
 
   <!-- CONTENIDO -->
   <main class="page-content">
-    <!-- Aquí puedes pegar tu contenido existente de "Sobre GreenHaul", "Nuestro Impacto", "Historia", "Beneficios", "Equipo", etc. -->
-    <!-- Si quieres, dime y te armo ese contenido de nuevo ya con estilos mejorados -->
+    <section class="section">
+      <div class="container">
+        <h1 class="section-title">Renta de Cajas <span class="highlight-sostenible">Reutilizables</span></h1>
+        <p class="text-center">MUDANZAS MÁS FÁCILES + PLANETA MÁS LIMPIO</p>
+        <p class="section-text text-center">Somos una empresa mexicana dedicada al alquiler de cajas reutilizables para mudanzas. Nuestra misión es hacer tu mudanza más fácil mientras cuidamos el medio ambiente.</p>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container text-center">
+        <h2 class="section-title">Nuestro Impacto Real</h2>
+        <div class="impacto-grid">
+          <div><strong>2400</strong><br>Mudanzas Completadas</div>
+          <div><strong>4200</strong><br>Cajas de Cartón Evitadas</div>
+          <div><strong>10 T</strong><br>Toneladas de Cartón Ahorradas</div>
+          <div><strong>98%</strong><br>Satisfacción del Cliente</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title text-center">Nuestra Historia</h2>
+        <div class="timeline">
+          <p><strong>2022 - La Idea</strong><br>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</p>
+          <p><strong>2023 - Primeras Cajas</strong><br>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</p>
+          <p><strong>2024 - Crecimiento</strong><br>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</p>
+          <p><strong>2024 - Plataforma Digital</strong><br>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</p>
+          <p><strong>2025 - Presente</strong><br>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</p>
+          <p><strong>2025 - Futuro</strong><br>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container text-center">
+        <h2 class="section-title">¿Por Qué Elegir <span class="highlight-sostenible">greenhauL</span>?</h2>
+        <div class="benefits-grid">
+          <div class="benefit-card">
+            <h3>Impacto Ambiental</h3>
+            <p>Reducimos residuos y promovemos el uso de materiales reutilizables.</p>
+          </div>
+          <div class="benefit-card">
+            <h3>Facilidad de Uso</h3>
+            <p>Entrega y recolección sin complicaciones en todo momento.</p>
+          </div>
+          <div class="benefit-card">
+            <h3>Apoyo Local</h3>
+            <p>Trabajamos con proveedores locales para generar empleo.</p>
+          </div>
+          <div class="benefit-card">
+            <h3>Cajas Resistentes</h3>
+            <p>Duraderas, seguras, fáciles de apilar y listas para usarse.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container text-center">
+        <h2 class="section-title">Conoce al Equipo</h2>
+        <p><strong>Paola Martínez</strong><br>Fundadora y CEO</p>
+        <p><strong>Andrés López</strong><br>Co-fundador y Operaciones</p>
+        <p><strong>Sofía Ramírez</strong><br>Desarrollo y Tecnología</p>
+      </div>
+    </section>
   </main>
 
-  <!-- FOOTER UNIFICADO -->
+  <!-- FOOTER, CARRITO Y JS INCLUIDOS -->
   <footer class="footer">
     <div class="container footer-content">
       <div class="footer-info">
@@ -88,7 +152,6 @@
     </div>
   </footer>
 
-  <!-- Modal del carrito -->
   <div class="cart-modal-overlay" id="cartModalOverlay">
     <div class="cart-modal">
       <div class="cart-modal-header">
@@ -110,7 +173,6 @@
     </div>
   </div>
 
-  <!-- Notificación -->
   <div class="cart-notification" id="cartNotification">
     <div class="notification-content">
       <div class="notification-icon-wrapper"><span class="notification-icon"></span></div>
@@ -118,7 +180,6 @@
     </div>
   </div>
 
-  <!-- JavaScript principal -->
   <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
