--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/pages.css" />
+  <style>
+    .timeline-item {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    }
+  
+    .timeline-item.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  </style>  
 </head>
 <body>
   <!-- HEADER -->
@@ -181,5 +193,21 @@
   </div>
 
   <script type="module" src="assets/js/main.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const timelineItems = document.querySelectorAll('.timeline-item');
+      if (timelineItems.length > 0) {
+        const observer = new IntersectionObserver(entries => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add('visible');
+            }
+          });
+        }, { threshold: 0.4 });
+  
+        timelineItems.forEach(item => observer.observe(item));
+      }
+    });
+  </script>  
 </body>
 </html>
