--- a/nosotros.html
+++ b/nosotros.html
@@ -8,17 +8,50 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/pages.css" />
   <style>
-    .timeline-item {
+    .fade-up {
       opacity: 0;
       transform: translateY(40px);
       transition: opacity 0.6s ease-out, transform 0.6s ease-out;
     }
 
-    .timeline-item.visible {
+    .fade-up.visible {
       opacity: 1;
       transform: translateY(0);
     }
-  </style>  
+
+    .scale-in {
+      opacity: 0;
+      transform: scale(0.9);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    }
+
+    .scale-in.visible {
+      opacity: 1;
+      transform: scale(1);
+    }
+
+    .slide-left {
+      opacity: 0;
+      transform: translateX(-40px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    }
+
+    .slide-left.visible {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .slide-right {
+      opacity: 0;
+      transform: translateX(40px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    }
+
+    .slide-right.visible {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  </style>
 </head>
 <body>
   <!-- HEADER -->
@@ -62,7 +95,7 @@
 
   <!-- CONTENIDO -->
   <main class="page-content">
-    <section class="section">
+    <section class="section fade-up">
       <div class="container">
         <h1 class="section-title">Renta de Cajas <span class="highlight-sostenible">Reutilizables</span></h1>
         <p class="text-center">MUDANZAS MÁS FÁCILES + PLANETA MÁS LIMPIO</p>
@@ -70,7 +103,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section slide-left">
       <div class="container text-center">
         <h2 class="section-title">Nuestro Impacto Real</h2>
         <div class="impacto-grid">
@@ -82,49 +115,37 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section fade-up">
       <div class="container">
         <h2 class="section-title text-center">Nuestra Historia</h2>
         <div class="timeline">
-          <div class="timeline-item">
-            <p><strong>2022 - La Idea</strong><br>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</p>
-          </div>
-          <div class="timeline-item">
-            <p><strong>2023 - Primeras Cajas</strong><br>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</p>
-          </div>
-          <div class="timeline-item">
-            <p><strong>2024 - Crecimiento</strong><br>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</p>
-          </div>
-          <div class="timeline-item">
-            <p><strong>2024 - Plataforma Digital</strong><br>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</p>
-          </div>
-          <div class="timeline-item">
-            <p><strong>2025 - Presente</strong><br>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</p>
-          </div>
-          <div class="timeline-item">
-            <p><strong>2025 - Futuro</strong><br>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</p>
-          </div>
+          <p class="fade-up"><strong>2022 - La Idea</strong><br>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor forma de hacer las cosas.</p>
+          <p class="fade-up"><strong>2023 - Primeras Cajas</strong><br>Compramos nuestros primeros lotes de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familias en la CDMX.</p>
+          <p class="fade-up"><strong>2024 - Crecimiento</strong><br>Expandiendo a municipios, aumentamos a 2,000 cajas y comenzamos a trabajar de la mano con empresas de logística responsable.</p>
+          <p class="fade-up"><strong>2024 - Plataforma Digital</strong><br>Lanzamos el portal web para facilitar la renta de cajas y mejorar la experiencia del cliente.</p>
+          <p class="fade-up"><strong>2025 - Presente</strong><br>Hoy contamos con más de 500 clientes en todo el país, y nuestro stock de cajas alquilables alcanza las 3,000 unidades con alta rotación.</p>
+          <p class="fade-up"><strong>2025 - Futuro</strong><br>Planeamos expandirnos a Guadalajara y Monterrey, además de seguir sumando complementos como asistencia profesional.</p>
         </div>
       </div>
     </section>
 
-    <section class="section">
+    <section class="section slide-right">
       <div class="container text-center">
         <h2 class="section-title">¿Por Qué Elegir <span class="highlight-sostenible">greenhauL</span>?</h2>
         <div class="benefits-grid">
-          <div class="benefit-card">
+          <div class="benefit-card scale-in">
             <h3>Impacto Ambiental</h3>
             <p>Reducimos residuos y promovemos el uso de materiales reutilizables.</p>
           </div>
-          <div class="benefit-card">
+          <div class="benefit-card scale-in">
             <h3>Facilidad de Uso</h3>
             <p>Entrega y recolección sin complicaciones en todo momento.</p>
           </div>
-          <div class="benefit-card">
+          <div class="benefit-card scale-in">
             <h3>Apoyo Local</h3>
             <p>Trabajamos con proveedores locales para generar empleo.</p>
           </div>
-          <div class="benefit-card">
+          <div class="benefit-card scale-in">
             <h3>Cajas Resistentes</h3>
             <p>Duraderas, seguras, fáciles de apilar y listas para usarse.</p>
           </div>
@@ -132,12 +153,12 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section fade-up">
       <div class="container text-center">
         <h2 class="section-title">Conoce al Equipo</h2>
-        <p><strong>Paola Martínez</strong><br>Fundadora y CEO</p>
-        <p><strong>Andrés López</strong><br>Co-fundador y Operaciones</p>
-        <p><strong>Sofía Ramírez</strong><br>Desarrollo y Tecnología</p>
+        <p class="fade-up"><strong>Paola Martínez</strong><br>Fundadora y CEO</p>
+        <p class="fade-up"><strong>Andrés López</strong><br>Co-fundador y Operaciones</p>
+        <p class="fade-up"><strong>Sofía Ramírez</strong><br>Desarrollo y Tecnología</p>
       </div>
     </section>
   </main>
@@ -159,67 +180,4 @@
           <li><a href="productos.html">Productos</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </div>
-      <div class="footer-social-links">
-        <h3>Síguenos</h3>
-        <div class="social-icons-wrapper">
-          <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      &copy; <span id="current-year">2025</span> greenhauL. Todos los derechos reservados.
-    </div>
-  </footer>
-
-  <div class="cart-modal-overlay" id="cartModalOverlay">
-    <div class="cart-modal">
-      <div class="cart-modal-header">
-        <h2>Tu Carrito</h2>
-        <button class="close-modal-btn" id="closeCartModalBtn">&times;</button>
-      </div>
-      <div class="cart-modal-body" id="cartItemsContainer"></div>
-      <div class="cart-modal-footer">
-        <div class="cart-summary">
-          <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
-          <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
-          <h3>Total: <span id="cartTotal">$0.00</span></h3>
-        </div>
-        <div class="cart-footer-buttons">
-          <button class="btn btn-secondary empty-cart-btn" id="emptyCartBtn">Vaciar Carrito</button>
-          <a href="confirmacion-entrega-recoleccion.html" class="btn btn-primary proceed-to-checkout-btn" id="proceedToCheckoutBtn">Finalizar Compra</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="cart-notification" id="cartNotification">
-    <div class="notification-content">
-      <div class="notification-icon-wrapper"><span class="notification-icon"></span></div>
-      <p id="notificationText"></p>
-    </div>
-  </div>
-
-  <script type="module" src="assets/js/main.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const timelineItems = document.querySelectorAll('.timeline-item');
-      if (timelineItems.length > 0) {
-        const observer = new IntersectionObserver(entries => {
-          entries.forEach(entry => {
-            if (entry.isIntersecting) {
-              entry.target.classList.add('visible');
-            }
-          });
-        }, { threshold: 0.4 });
-
-        timelineItems.forEach(item => observer.observe(item));
-      }
-    });
-  </script>  
-</body>
-</html>
+          <li><a hr
