--- a/nosotros.html
+++ b/nosotros.html
@@ -24,16 +24,19 @@
       margin-top: 1rem;
     }
     .impact-card {
-      background: white;
+      background: linear-gradient(135deg, #1ec96b, #03a9f4);
+      color: white;
       border-radius: 16px;
       padding: 2rem;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
       text-align: center;
+      font-size: 1.1rem;
+      font-weight: 500;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .impact-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 36px rgba(0, 0, 0, 0.12);
+      transform: translateY(-8px) scale(1.03);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
     }
     .timeline {
       position: relative;
@@ -51,7 +54,7 @@
       transition: transform 0.3s ease;
     }
     .timeline-item:hover {
-      transform: scale(1.02);
+      transform: scale(1.03);
     }
     .timeline-item::before {
       content: "";
@@ -79,8 +82,8 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .benefit-card:hover {
-      transform: scale(1.04);
-      box-shadow: 0 12px 36px rgba(0, 0, 0, 0.12);
+      transform: scale(1.05);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
     }
     .section-title span {
       background: linear-gradient(90deg, #1ec96b, #03a9f4);
@@ -103,7 +106,7 @@
       transition: transform 0.3s ease;
     }
     .team-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px);
     }
   </style>
 </head>
